# itinerario_viaje

./: README.md  itinerario_plan_a.html  itinerario_plan_b.html  itinerario_plan_c.html  itinerario_plan_d.html  itinerario_plan_e.html  itinerario_viaje.html  itinerario_viaje_actualizado.html  itinerario_viaje_conexiones.html  plan_a.py  plan_b.py  planes.py  presentation.py  pyproject.toml
viaje/: presentation.py  requirements.txt
