[tool.poetry]
name = "viaje"
version = "0.1.0"
description = ""
authors = ["mbarram <matias.barra@itrend.cl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
folium = "^0.19.4"
pandas = "^2.2.3"
streamlit = "^1.42.0"
streamlit-folium = "^0.24.0"
tabulate = "^0.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
